compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__assert_const_concat_many_strings.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\nconst big_concat = \"a\" <> \"b\" <> \"c\" <> \"d\" <> \"e\" <> \"f\" <> \"g\" <> \"h\" <> \"i\" <> \"j\" <> \"k\" <> \"l\" <> \"m\" <> \"n\" <> \"o\" <> \"p\" <> \"q\" <> \"r\" <> \"s\" <> \"t\" <> \"u\" <> \"v\" <> \"w\" <> \"x\" <> \"y\" <> \"z\"\n\npub fn foo() {\n  big_concat\n}\n"
---
module rec my.``mod``
let private big_concat = "a" + "b" + "c" + "d" + "e" + "f" + "g" + "h" + "i" + "j" + "k" + "l" + "m" + "n" + "o" + "p" + "q" + "r" + "s" + "t" + "u" + "v" + "w" + "x" + "y" + "z"
let foo () = begin
    big_concat
end
