compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__assert_const_concat_other_const_concat.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\nconst cute_bee = \"cute\" <> \"bee\"\nconst cute_cute_bee_buzz = cute_bee <> \"buzz\"\n\npub fn foo() {\n  cute_cute_bee_buzz\n}\n"
---
module rec my.``mod``
let private cute_bee = "cute" + "bee"
let private cute_cute_bee_buzz = cute_bee + "buzz"
let foo () = begin
    cute_cute_bee_buzz
end
