compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__assert_string_prefix.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn foo(x) {\n  let assert \"m-\" <> rest = x\n  rest\n}\n"
---
module rec my.``mod``

let foo (x: string) = begin
    let (Gleam_codegen_string_parts "m-" (_, rest)) = x
    rest
end
