compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__assert_string_prefix_discard.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
assertion_line: 458
expression: "\npub fn main(x) {\n  let assert \"m-\" <> _ = x\n}\n"
---
module rec my.``mod``
let main (x: string): string = begin
    let (Gleam_codegen_string_parts "m-" (_, _)) = x
    x
end
