compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__concat_constant_fn.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
assertion_line: 414
expression: "\nconst cs = s\n\nfn s() {\n  \"s\"\n}\n\npub fn go() {\n  cs() <> cs()\n}\n"
---
module rec my.``mod``
let private s (): string = begin
    "s"
end
let private cs = s
let go (): string = begin
    cs() + cs()
end
