compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__discard_concat_rest_pattern.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
assertion_line: 360
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" <> _ -> Nil\n    _ -> Nil\n  }\n}\n"
---
module rec my.``mod``
let go (x: string): unit = begin
    match x with
    | Gleam__codegen__prefix "Hello, " _ ->
        ()
    | _ ->
        ()
end
