compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__match_string_prefix_assignment_with_escape_sequences.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn go(x) {\n  let _ = case x {\n    \"\\f\" as start <> rest -> \"test\"\n    \"\\n\" as start <> rest -> \"test\"\n    \"\\r\" as start <> rest -> \"test\"\n    \"\\t\" as start <> rest -> \"test\"\n    \"\\\"\" as start <> rest -> \"test\"\n    \"\\\\\" as start <> rest -> \"test\"\n    \"\\f \\n \\r \\t \\\" \\\\\" as start <> rest -> \"control chars with prefix assignment\"\n    \"\\u{9}\" as start <> rest -> \"test\"\n    \"\\u{000009}\" as start <> rest -> \"test\"\n    \"\\u{21}\" as start <> rest -> \"test\"\n    \"\\u{100}\" as start <> rest -> \"test\"\n    \"\\u{1000}\" as start <> rest -> \"test\"\n    \"\\u{1F600}\" as start <> rest -> \"test\"\n    \"\\u{1f600}\" as start <> rest -> \"test\"\n    \"\\u{01F600}\" as start <> rest -> \"test\"\n    \"\\u{01f600}\" as start <> rest -> \"test\"\n    \"\\u{9} \\u{000009} \\u{21} \\u{100} \\u{1000} \\u{1F600} \\u{01F600}\" as start <> rest -> \"test\"\n    _ -> \"Unknown\"\n  }\n}\n"
---
module rec my.``mod``
let go (x: string) = begin
    let _ = 
        match x with
        | Gleam_codegen_string_parts "\f" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\n" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\r" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\t" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\"" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\\" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\f \n \r \t \" \\" (start, rest) ->
            "control chars with prefix assignment"
        | Gleam_codegen_string_parts "\u9" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\u000009" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\u21" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\u100" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\u1000" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\u1F600" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\u1f600" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\u01F600" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\u01f600" (start, rest) ->
            "test"
        | Gleam_codegen_string_parts "\u9 \u000009 \u21 \u100 \u1000 \u1F600 \u01F600" (start, rest) ->
            "test"
        | _ ->
            "Unknown"
    _
end
