compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__match_string_prefix_assignment_with_multiple_subjects.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"1\" as digit <> _ | \"2\" as digit <> _ -> digit\n    _ -> \"Unknown\"\n  }\n}\n"
---
module rec my.``mod``
let go (x: string) = begin
    match x with
    | Gleam_codegen_string_parts "1" (digit, _) | Gleam_codegen_string_parts "2" (digit, _) ->
        digit
    | _ ->
        "Unknown"
end
