compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__match_string_prefix_not_unicode_escape_sequence.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn go(x) {\n  let _ = case x {\n    \"\\\\u{9}\" <> rest -> \"test\"\n    \"\\\\u{000009}\" <> rest -> \"test\"\n    \"\\\\u{21}\" <> rest -> \"test\"\n    \"\\\\u{100}\" <> rest -> \"test\"\n    \"\\\\u{1000}\" <> rest -> \"test\"\n    \"\\\\u{1F600}\" <> rest -> \"test\"\n    \"\\\\u{1f600}\" <> rest -> \"test\"\n    \"\\\\u{01F600}\" <> rest -> \"test\"\n    \"\\\\u{01f600}\" <> rest -> \"test\"\n    \"\\\\u{9} \\\\u{000009} \\\\u{21} \\\\u{100} \\\\u{1000} \\\\u{1F600} \\\\u{01F600}\" <> rest -> \"test\"\n    _ -> \"Unknown\"\n  }\n}\n"
---
module rec my.``mod``

let go (x: string) = begin
    let _ =
        match x with
        | Gleam_codegen_string_parts "\\u{9}" (_, rest) ->
            "test"
        | Gleam_codegen_string_parts "\\u{000009}" (_, rest) ->
            "test"
        | Gleam_codegen_string_parts "\\u{21}" (_, rest) ->
            "test"
        | Gleam_codegen_string_parts "\\u{100}" (_, rest) ->
            "test"
        | Gleam_codegen_string_parts "\\u{1000}" (_, rest) ->
            "test"
        | Gleam_codegen_string_parts "\\u{1F600}" (_, rest) ->
            "test"
        | Gleam_codegen_string_parts "\\u{1f600}" (_, rest) ->
            "test"
        | Gleam_codegen_string_parts "\\u{01F600}" (_, rest) ->
            "test"
        | Gleam_codegen_string_parts "\\u{01f600}" (_, rest) ->
            "test"
        | Gleam_codegen_string_parts "\\u{9} \\u{000009} \\u{21} \\u{100} \\u{1000} \\u{1F600} \\u{01F600}" (_, rest) ->
            "test"
        | _ ->
            "Unknown"
    _
end
