compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__strings__match_string_prefix_with_guard.snap
---
source: compiler-core/src/fsharp/tests/strings.rs
expression: "\npub fn go(x) {\n  case x {\n    \"Hello, \" <> name if name == \"Dude\" -> name\n    _ -> \"Unknown\"\n  }\n}\n"
---
module rec my.``mod``

let go (x: string) = begin
    match x with
    | Gleam_codegen_string_parts "Hello, " (_, name) when name = "Dude" ->
        name
    | _ ->
        "Unknown"
end
